# liosam_sc_EOC

SC-LIO-SAM/: CMakeLists.txt  CMakeLists1.txt  SC-LIO-SAM.kdev4
SC-LIO-SAM-master/SC-LIO-SAM/.kdev4/: SC-LIO-SAM.kdev4
SC-LIO-SAM-master/SC-LIO-SAM/config/: UrbanNav_HK19.yaml  params_liosam.yaml
SC-LIO-SAM-master/SC-LIO-SAM/launch/: 19UrbanNav_HK.launch  20UrbanNav_HK.launch  21UrbanNav_HK.launch
SC-LIO-SAM-master/SC-LIO-SAM/src/: efficient_online_segmentation_node.cpp  featureExtraction.cpp
SC-LIO-SAM-master/SC-LIO-SAM/src/efficient_online_segmentation/: efficient_online_segmentation.cpp  smart_sector.cpp  smart_sector.h
SC-LIO-SAM/config/: UrbanNav_HK19.yaml  UrbanNav_HK20.yaml  UrbanNav_HK21.yaml  kitti.yaml
SC-LIO-SAM/include/: utility.h
SC-LIO-SAM/launch/: 19UrbanNav_HK.launch  20UrbanNav_HK.launch  21UrbanNav_HK.launch  kitti.launch  run.launch  segmentation_params.yaml
SC-LIO-SAM/launch/include/: module_loam.launch
SC-LIO-SAM/launch/include/config/: lio.gv  rviz.rviz
SC-LIO-SAM/src/: Scancontext.cpp  dataConvert.cpp  efficient_online_segmentation_node.cpp  featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  txt_to_rosmsg.cpp
SC-LIO-SAM/src/efficient_online_segmentation/: adaptive_ground_plane_estimator.h  efficient_online_segmentation.cpp  efficient_online_segmentation.h  smart_sector.cpp  smart_sector.h
